# interai

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
interai/embedding/: api_openai.py  embedding.py  local_bert.py
interai/reader/: reader.py  url_reader.py
interai/splitter/: character_splitter.py  splitter.py
tests/embedding/: test_api_openai.py  test_embedding.py  test_local_bert.py
tests/reader/: test_reader.py  test_url_reader.py
tests/splitter/: test_character_splitter.py  test_splitter.py  test_validate_document.py
